--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "jack-cool-portfolio",
   "version": "1.0.0",
   "description": "Jack Cool's Personal Portfolio Website",
-  "homepage": "https://jackkoo1207.github.io",
+  "homepage": "https://jackkoo1207.github.io/portfolio-website/",
   "private": true,
   "dependencies": {
     "react": "^18.2.0",
@@ -11,9 +11,9 @@
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^3.1.0",
-    "vite": "^4.1.0",
-    "gh-pages": "^5.0.0"
+    "@vitejs/plugin-react": "^5.1.2",
+    "gh-pages": "^5.0.0",
+    "vite": "^7.3.1"
   },
   "scripts": {
     "dev": "vite",
